k8s/gitops/workloads/frontend/templates/netpol/cilium_netpol.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: frontend-policy
  namespace: frontend-ns
spec:
  endpointSelector:
    matchLabels:
      app: workload-frontend-dev

  ingress:
    - fromEntities:
        - ingress
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP

  egress:
    # DNS
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP

    # Backend
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: backend-ns
            app: workload-backend-dev
      toPorts:
        - ports:
            - port: "8000"
              protocol: TCP
          rules:
            http:
              - method: GET
                path: "/api/video"
              - method: GET
                path: "/api/shop"
              - method: GET
                path: "/api/payments"
              - method: POST
                path: "/api/events"
