k8s/gitops/workloads/frontend/templates/netpol/deny-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: frontend-ns
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
